Fix line spacing in food-detail card

--- a/src/app/Food/food-detail/food-detail.component.css
+++ b/src/app/Food/food-detail/food-detail.component.css
@@ -42,3 +42,7 @@ div {
   font-family: cursive;
   font-size: 2rem;
 }
+
+.notecard-spacing {
+  line-height: 145%;
+}
