--- a/src/app/Food/food-item/food-item.component.css
+++ b/src/app/Food/food-item/food-item.component.css
@@ -1,8 +1,3 @@
-.container {
-  /* height: 50px;
-  padding: 0;
-  margin: 0; */
-}
 .food-item-row {
   height: 65px;
 }
@@ -12,8 +7,9 @@
   margin-left: -5%;
 }
 .expired {
-  background: rgba(0, 0, 0, 0.5);
-  padding: 2%;
+  background: rgba(155, 0, 0, 0.4);
+  padding: 3%;
+  border-radius: 6px;
 }
 
 .food-item-text {
